Add core code and support for modin and cuDF (#1)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,10 +19,10 @@ repos:
         language: system
         entry: isort
       - id: pylint-src
-        name: PyLint on ked_df/*
+        name: PyLint on kedro_dataframe_dropin/*
         types: [file, python]
         language: system
-        files: ^ked_df
+        files: ^kedro_dataframe_dropin
         entry: pylint
       - id: pylint-test
         name: PyLint on tests/*
