--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "ked-df"
+name = "kedro-dataframe-dropin"
 version = "0.1.0"
 description = "A Kedro plugin to utilise pandas dropins (like cuDF or modin) in place of the pandas datasets"
 authors = ["Zain Patel <zain.patel06@gmail.com>"]
