--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,9 @@ description = "A Kedro plugin to utilise pandas dropins (like cuDF or modin) in 
 authors = ["Zain Patel <zain.patel06@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.7, <3.9"
+python = ">=3.7.1, <3.9"
 kedro = "^0.17.0"
+pandas = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "6.2.1"
